--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -11,8 +11,11 @@ allure-python-commons==2.13.5
     # via allure-pytest
 annotated-types==0.7.0
     # via pydantic
+anthropic==0.30.1
+    # via langchain-anthropic
 anyio==4.4.0
     # via
+    #   anthropic
     #   httpx
     #   jupyter-server
     #   openai
@@ -48,13 +51,8 @@ beautifulsoup4==4.12.2
     #   nbconvert
 bleach==6.1.0
     # via nbconvert
-blis==0.7.11
-    # via thinc
-catalogue==2.0.10
-    # via
-    #   spacy
-    #   srsly
-    #   thinc
+cachetools==5.3.3
+    # via google-auth
 certifi==2023.11.17
     # via
     #   httpcore
@@ -71,17 +69,9 @@ chardet==5.2.0
 charset-normalizer==3.3.2
     # via requests
 click==8.1.7
-    # via
-    #   nltk
-    #   typer
-cloudpathlib==0.18.1
-    # via weasel
+    # via nltk
 comm==0.2.2
     # via ipykernel
-confection==0.1.5
-    # via
-    #   thinc
-    #   weasel
 coverage==6.5.0
     # via
     #   coveralls
@@ -89,11 +79,6 @@ coverage==6.5.0
 coveralls==3.3.1
 cryptography==41.0.7
     # via pyjwt
-cymem==2.0.8
-    # via
-    #   preshed
-    #   spacy
-    #   thinc
 dataclasses-json==0.6.7
     # via langchain-community
 debugpy==1.8.1
@@ -103,6 +88,7 @@ decorator==5.1.1
 deep-translator==1.11.4
 defusedxml==0.7.1
     # via
+    #   langchain-anthropic
     #   nbconvert
     #   python3-openid
 dill==0.3.7
@@ -110,7 +96,9 @@ dill==0.3.7
 distlib==0.3.8
     # via virtualenv
 distro==1.9.0
-    # via openai
+    # via
+    #   anthropic
+    #   openai
 django==5.0
     # via django-allauth
 django-allauth==0.59.0
@@ -123,25 +111,70 @@ executing==2.0.1
 faker==22.0.0
 fastjsonschema==2.20.0
     # via nbformat
-filelock==3.13.1
-    # via virtualenv
+fasttext==0.9.3
+filelock==3.15.4
+    # via
+    #   huggingface-hub
+    #   virtualenv
 fqdn==1.5.1
     # via jsonschema
 frozenlist==1.4.1
     # via
     #   aiohttp
     #   aiosignal
+fsspec==2024.6.1
+    # via huggingface-hub
+google-ai-generativelanguage==0.6.6
+    # via google-generativeai
+google-api-core==2.19.1
+    # via
+    #   google-ai-generativelanguage
+    #   google-api-python-client
+    #   google-generativeai
+google-api-python-client==2.136.0
+    # via google-generativeai
+google-auth==2.31.0
+    # via
+    #   google-ai-generativelanguage
+    #   google-api-core
+    #   google-api-python-client
+    #   google-auth-httplib2
+    #   google-generativeai
+google-auth-httplib2==0.2.0
+    # via google-api-python-client
+google-generativeai==0.7.1
+    # via langchain-google-genai
+googleapis-common-protos==1.63.2
+    # via
+    #   google-api-core
+    #   grpcio-status
+grpcio==1.64.1
+    # via
+    #   google-api-core
+    #   grpcio-status
+grpcio-status==1.62.2
+    # via google-api-core
 h11==0.14.0
     # via
     #   httpcore
     #   wsproto
 httpcore==1.0.5
     # via httpx
+httplib2==0.22.0
+    # via
+    #   google-api-python-client
+    #   google-auth-httplib2
 httpx==0.27.0
     # via
+    #   anthropic
     #   jupyterlab
+    #   langchain-mistralai
     #   ollama
     #   openai
+httpx-sse==0.4.0
+    # via langchain-mistralai
+huggingface-hub==0.23.4
+    # via tokenizers
 identify==2.5.33
     # via pre-commit
 idna==3.6
@@ -170,7 +203,8 @@ jinja2==3.1.4
     #   jupyterlab
     #   jupyterlab-server
     #   nbconvert
-    #   spacy
+jiter==0.5.0
+    # via anthropic
 joblib==1.4.2
     # via nltk
 json5==0.9.25
@@ -225,31 +259,29 @@ jupyterlab-server==2.27.2
     #   notebook
 langchain==0.2.5
     # via langchain-community
+langchain-anthropic==0.1.15
 langchain-community==0.2.5
 langchain-core==0.2.9
     # via
     #   langchain
+    #   langchain-anthropic
     #   langchain-community
+    #   langchain-google-genai
+    #   langchain-mistralai
     #   langchain-openai
     #   langchain-text-splitters
+langchain-google-genai==1.0.7
+langchain-mistralai==0.1.9
 langchain-openai==0.1.9
 langchain-text-splitters==0.2.1
     # via langchain
-langcodes==3.4.0
-    # via spacy
 langsmith==0.1.81
     # via
     #   langchain
     #   langchain-community
     #   langchain-core
-language-data==1.2.0
-    # via langcodes
 lxml==5.0.0
     # via ebooklib
-marisa-trie==1.2.0
-    # via language-data
-markdown-it-py==3.0.0
-    # via rich
 markupsafe==2.1.5
     # via
     #   jinja2
@@ -262,19 +294,12 @@ matplotlib-inline==0.1.7
     #   ipython
 mccabe==0.7.0
     # via pylint
-mdurl==0.1.2
-    # via markdown-it-py
 mistune==3.0.2
     # via nbconvert
 multidict==6.0.5
     # via
     #   aiohttp
     #   yarl
-murmurhash==1.0.10
-    # via
-    #   preshed
-    #   spacy
-    #   thinc
 mypy==1.8.0
 mypy-extensions==1.0.0
     # via
@@ -301,11 +326,9 @@ notebook-shim==0.2.4
     #   notebook
 numpy==1.26.4
     # via
-    #   blis
+    #   fasttext
     #   langchain
     #   langchain-community
-    #   spacy
-    #   thinc
 oauthlib==3.2.2
     # via requests-oauthlib
 ollama==0.2.1
@@ -319,6 +342,7 @@ overrides==7.7.0
     # via jupyter-server
 packaging==24.1
     # via
+    #   huggingface-hub
     #   ipykernel
     #   jupyter-server
     #   jupyterlab
@@ -327,16 +351,12 @@ packaging==24.1
     #   marshmallow
     #   nbconvert
     #   pytest
-    #   spacy
-    #   thinc
-    #   weasel
 pandocfilters==1.5.1
     # via nbconvert
 parso==0.8.4
     # via jedi
 pexpect==4.9.0
     # via ipython
-pip==24.1.1
 platformdirs==4.1.0
     # via
     #   jupyter-core
@@ -347,14 +367,22 @@ pluggy==1.3.0
     #   allure-python-commons
     #   pytest
 pre-commit==3.6.0
-preshed==3.0.9
-    # via
-    #   spacy
-    #   thinc
 prometheus-client==0.20.0
     # via jupyter-server
 prompt-toolkit==3.0.47
     # via ipython
+proto-plus==1.24.0
+    # via
+    #   google-ai-generativelanguage
+    #   google-api-core
+protobuf==4.25.3
+    # via
+    #   google-ai-generativelanguage
+    #   google-api-core
+    #   google-generativeai
+    #   googleapis-common-protos
+    #   grpcio-status
+    #   proto-plus
 psutil==6.0.0
     # via ipykernel
 ptyprocess==0.7.0
@@ -363,25 +391,30 @@ ptyprocess==0.7.0
     #   terminado
 pure-eval==0.2.2
     # via stack-data
+pyasn1==0.6.0
+    # via
+    #   pyasn1-modules
+    #   rsa
+pyasn1-modules==0.4.0
+    # via google-auth
+pybind11==2.13.1
+    # via fasttext
 pycparser==2.21
     # via cffi
 pydantic==2.7.4
     # via
-    #   confection
+    #   anthropic
+    #   google-generativeai
     #   langchain
     #   langchain-core
     #   langsmith
     #   openai
-    #   spacy
-    #   thinc
-    #   weasel
 pydantic-core==2.18.4
     # via pydantic
 pygments==2.18.0
     # via
     #   ipython
     #   nbconvert
-    #   rich
 pyjwt==2.8.0
     # via django-allauth
 pylint==3.0.3
@@ -391,6 +424,8 @@ pylint==3.0.3
 pylint-django==2.5.5
 pylint-plugin-utils==0.8.2
     # via pylint-django
+pyparsing==3.1.2
+    # via httplib2
 pysocks==1.7.1
     # via urllib3
 pytest==7.4.3
@@ -411,6 +446,7 @@ python3-openid==3.2.0
     # via django-allauth
 pyyaml==6.0.1
     # via
+    #   huggingface-hub
     #   jupyter-events
     #   langchain
     #   langchain-community
@@ -435,14 +471,14 @@ requests==2.31.0
     #   coveralls
     #   deep-translator
     #   django-allauth
+    #   google-api-core
+    #   huggingface-hub
     #   jupyterlab-server
     #   langchain
     #   langchain-community
     #   langsmith
     #   requests-oauthlib
-    #   spacy
     #   tiktoken
-    #   weasel
 requests-oauthlib==1.3.1
     # via django-allauth
 rfc3339-validator==0.1.4
@@ -453,24 +489,20 @@ rfc3986-validator==0.1.1
     # via
     #   jsonschema
     #   jupyter-events
-rich==13.7.1
-    # via typer
 rpds-py==0.18.1
     # via
     #   jsonschema
     #   referencing
+rsa==4.9
+    # via google-auth
 selenium==4.20.0
 send2trash==1.8.3
     # via jupyter-server
 setuptools==70.2.0
     # via
+    #   fasttext
     #   jupyterlab
-    #   marisa-trie
     #   nodeenv
-    #   spacy
-    #   thinc
-shellingham==1.5.4
-    # via typer
 six==1.16.0
     # via
     #   asttokens
@@ -479,10 +511,9 @@ six==1.16.0
     #   python-dateutil
     #   rfc3339-validator
     #   transliterate
-smart-open==7.0.4
-    # via weasel
 sniffio==1.3.1
     # via
+    #   anthropic
     #   anyio
     #   httpx
     #   openai
@@ -491,23 +522,12 @@ sortedcontainers==2.4.0
     # via trio
 soupsieve==2.5
     # via beautifulsoup4
-spacy==3.7.5
-spacy-legacy==3.0.12
-    # via spacy
-spacy-loggers==1.0.5
-    # via spacy
 sqlalchemy==2.0.31
     # via
     #   langchain
     #   langchain-community
 sqlparse==0.4.4
     # via django
-srsly==2.4.8
-    # via
-    #   confection
-    #   spacy
-    #   thinc
-    #   weasel
 stack-data==0.6.3
     # via ipython
 tenacity==8.4.1
@@ -519,12 +539,14 @@ terminado==0.18.1
     # via
     #   jupyter-server
     #   jupyter-server-terminals
-thinc==8.2.5
-    # via spacy
 tiktoken==0.7.0
     # via langchain-openai
 tinycss2==1.3.0
     # via nbconvert
+tokenizers==0.19.1
+    # via
+    #   anthropic
+    #   langchain-mistralai
 tomlkit==0.12.3
     # via pylint
 tornado==6.4.1
@@ -537,9 +559,10 @@ tornado==6.4.1
     #   terminado
 tqdm==4.66.4
     # via
+    #   google-generativeai
+    #   huggingface-hub
     #   nltk
     #   openai
-    #   spacy
 traitlets==5.14.3
     # via
     #   comm
@@ -561,41 +584,34 @@ trio==0.25.0
     #   trio-websocket
 trio-websocket==0.11.1
     # via selenium
-typer==0.12.3
-    # via
-    #   spacy
-    #   weasel
 types-python-dateutil==2.9.0.20240316
     # via arrow
 typing-extensions==4.12.2
     # via
+    #   anthropic
+    #   google-generativeai
+    #   huggingface-hub
     #   mypy
     #   openai
     #   pydantic
     #   pydantic-core
     #   selenium
     #   sqlalchemy
-    #   typer
     #   typing-inspect
 typing-inspect==0.9.0
     # via dataclasses-json
 uri-template==1.3.0
     # via jsonschema
+uritemplate==4.1.1
+    # via google-api-python-client
 urllib3==2.1.0
     # via
     #   requests
     #   selenium
 virtualenv==20.25.0
     # via pre-commit
-wasabi==1.1.3
-    # via
-    #   spacy
-    #   thinc
-    #   weasel
 wcwidth==0.2.13
     # via prompt-toolkit
-weasel==0.4.1
-    # via spacy
 webcolors==24.6.0
     # via jsonschema
 webencodings==0.5.1
@@ -604,8 +620,6 @@ webencodings==0.5.1
     #   tinycss2
 websocket-client==1.8.0
     # via jupyter-server
-wrapt==1.16.0
-    # via smart-open
 wsproto==1.2.0
     # via trio-websocket
 yarl==1.9.4
