--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,11 @@ aiosignal==1.3.1
     # via aiohttp
 annotated-types==0.7.0
     # via pydantic
+anthropic==0.30.1
+    # via langchain-anthropic
 anyio==4.4.0
     # via
+    #   anthropic
     #   httpx
     #   openai
 asgiref==3.7.2
@@ -18,13 +21,8 @@ attrs==23.2.0
     # via aiohttp
 beautifulsoup4==4.12.2
     # via deep-translator
-blis==0.7.11
-    # via thinc
-catalogue==2.0.10
-    # via
-    #   spacy
-    #   srsly
-    #   thinc
+cachetools==5.3.3
+    # via google-auth
 certifi==2023.11.17
     # via
     #   httpcore
@@ -36,54 +34,90 @@ chardet==5.2.0
 charset-normalizer==3.3.2
     # via requests
 click==8.1.7
-    # via
-    #   nltk
-    #   typer
-cloudpathlib==0.18.1
-    # via weasel
-confection==0.1.5
-    # via
-    #   thinc
-    #   weasel
+    # via nltk
 cryptography==41.0.7
     # via pyjwt
-cymem==2.0.8
-    # via
-    #   preshed
-    #   spacy
-    #   thinc
 dataclasses-json==0.6.7
     # via langchain-community
 deep-translator==1.11.4
 defusedxml==0.7.1
-    # via python3-openid
+    # via
+    #   langchain-anthropic
+    #   python3-openid
 distro==1.9.0
-    # via openai
+    # via
+    #   anthropic
+    #   openai
 django==5.0
     # via django-allauth
 django-allauth==0.59.0
 django-widget-tweaks==1.5.0
 ebooklib==0.18
+fasttext==0.9.3
+filelock==3.15.4
+    # via huggingface-hub
 frozenlist==1.4.1
     # via
     #   aiohttp
     #   aiosignal
+fsspec==2024.6.1
+    # via huggingface-hub
+google-ai-generativelanguage==0.6.6
+    # via google-generativeai
+google-api-core==2.19.1
+    # via
+    #   google-ai-generativelanguage
+    #   google-api-python-client
+    #   google-generativeai
+google-api-python-client==2.136.0
+    # via google-generativeai
+google-auth==2.31.0
+    # via
+    #   google-ai-generativelanguage
+    #   google-api-core
+    #   google-api-python-client
+    #   google-auth-httplib2
+    #   google-generativeai
+google-auth-httplib2==0.2.0
+    # via google-api-python-client
+google-generativeai==0.7.1
+    # via langchain-google-genai
+googleapis-common-protos==1.63.2
+    # via
+    #   google-api-core
+    #   grpcio-status
+grpcio==1.64.1
+    # via
+    #   google-api-core
+    #   grpcio-status
+grpcio-status==1.62.2
+    # via google-api-core
 h11==0.14.0
     # via httpcore
 httpcore==1.0.5
     # via httpx
+httplib2==0.22.0
+    # via
+    #   google-api-python-client
+    #   google-auth-httplib2
 httpx==0.27.0
     # via
+    #   anthropic
+    #   langchain-mistralai
     #   ollama
     #   openai
+httpx-sse==0.4.0
+    # via langchain-mistralai
+huggingface-hub==0.23.4
+    # via tokenizers
 idna==3.6
     # via
     #   anyio
     #   httpx
     #   requests
     #   yarl
-jinja2==3.1.4
-    # via spacy
+jiter==0.5.0
+    # via anthropic
 joblib==1.4.2
     # via nltk
 jsonpatch==1.33
@@ -92,56 +126,43 @@ jsonpointer==3.0.0
     # via jsonpatch
 langchain==0.2.5
     # via langchain-community
+langchain-anthropic==0.1.15
 langchain-community==0.2.5
 langchain-core==0.2.9
     # via
     #   langchain
+    #   langchain-anthropic
     #   langchain-community
+    #   langchain-google-genai
+    #   langchain-mistralai
     #   langchain-openai
     #   langchain-text-splitters
+langchain-google-genai==1.0.7
+langchain-mistralai==0.1.9
 langchain-openai==0.1.9
 langchain-text-splitters==0.2.1
     # via langchain
-langcodes==3.4.0
-    # via spacy
 langsmith==0.1.81
     # via
     #   langchain
     #   langchain-community
     #   langchain-core
-language-data==1.2.0
-    # via langcodes
 lxml==5.0.0
     # via ebooklib
-marisa-trie==1.2.0
-    # via language-data
-markdown-it-py==3.0.0
-    # via rich
-markupsafe==2.1.5
-    # via jinja2
 marshmallow==3.21.3
     # via dataclasses-json
-mdurl==0.1.2
-    # via markdown-it-py
 multidict==6.0.5
     # via
     #   aiohttp
     #   yarl
-murmurhash==1.0.10
-    # via
-    #   preshed
-    #   spacy
-    #   thinc
 mypy-extensions==1.0.0
     # via typing-inspect
 nltk==3.8.1
 numpy==1.26.4
     # via
-    #   blis
+    #   fasttext
     #   langchain
     #   langchain-community
-    #   spacy
-    #   thinc
 oauthlib==3.2.2
     # via requests-oauthlib
 ollama==0.2.1
@@ -151,38 +172,50 @@ orjson==3.10.5
     # via langsmith
 packaging==24.1
     # via
+    #   huggingface-hub
     #   langchain-core
     #   marshmallow
-    #   spacy
-    #   thinc
-    #   weasel
-pip==24.1.1
-preshed==3.0.9
+proto-plus==1.24.0
     # via
-    #   spacy
-    #   thinc
+    #   google-ai-generativelanguage
+    #   google-api-core
+protobuf==4.25.3
+    # via
+    #   google-ai-generativelanguage
+    #   google-api-core
+    #   google-generativeai
+    #   googleapis-common-protos
+    #   grpcio-status
+    #   proto-plus
+pyasn1==0.6.0
+    # via
+    #   pyasn1-modules
+    #   rsa
+pyasn1-modules==0.4.0
+    # via google-auth
+pybind11==2.13.1
+    # via fasttext
 pycparser==2.21
     # via cffi
 pydantic==2.7.4
     # via
-    #   confection
+    #   anthropic
+    #   google-generativeai
     #   langchain
     #   langchain-core
     #   langsmith
     #   openai
-    #   spacy
-    #   thinc
-    #   weasel
 pydantic-core==2.18.4
     # via pydantic
-pygments==2.18.0
-    # via rich
 pyjwt==2.8.0
     # via django-allauth
+pyparsing==3.1.2
+    # via httplib2
 python3-openid==3.2.0
     # via django-allauth
 pyyaml==6.0.1
     # via
+    #   huggingface-hub
     #   langchain
     #   langchain-community
     #   langchain-core
@@ -194,93 +227,70 @@ requests==2.31.0
     # via
     #   deep-translator
     #   django-allauth
+    #   google-api-core
+    #   huggingface-hub
     #   langchain
     #   langchain-community
     #   langsmith
     #   requests-oauthlib
-    #   spacy
     #   tiktoken
-    #   weasel
 requests-oauthlib==1.3.1
     # via django-allauth
-rich==13.7.1
-    # via typer
+rsa==4.9
+    # via google-auth
 setuptools==70.2.0
-    # via
-    #   marisa-trie
-    #   spacy
-    #   thinc
-shellingham==1.5.4
-    # via typer
+    # via fasttext
 six==1.16.0
     # via
     #   ebooklib
     #   transliterate
-smart-open==7.0.4
-    # via weasel
 sniffio==1.3.1
     # via
+    #   anthropic
     #   anyio
     #   httpx
     #   openai
 soupsieve==2.5
     # via beautifulsoup4
-spacy==3.7.5
-spacy-legacy==3.0.12
-    # via spacy
-spacy-loggers==1.0.5
-    # via spacy
 sqlalchemy==2.0.31
     # via
     #   langchain
     #   langchain-community
 sqlparse==0.4.4
     # via django
-srsly==2.4.8
-    # via
-    #   confection
-    #   spacy
-    #   thinc
-    #   weasel
 tenacity==8.4.1
     # via
     #   langchain
     #   langchain-community
     #   langchain-core
-thinc==8.2.5
-    # via spacy
 tiktoken==0.7.0
     # via langchain-openai
+tokenizers==0.19.1
+    # via
+    #   anthropic
+    #   langchain-mistralai
 tqdm==4.66.4
     # via
+    #   google-generativeai
+    #   huggingface-hub
     #   nltk
     #   openai
-    #   spacy
 transliterate==1.10.2
-typer==0.12.3
-    # via
-    #   spacy
-    #   weasel
 typing-extensions==4.12.2
     # via
+    #   anthropic
+    #   google-generativeai
+    #   huggingface-hub
     #   openai
     #   pydantic
     #   pydantic-core
     #   sqlalchemy
-    #   typer
     #   typing-inspect
 typing-inspect==0.9.0
     # via dataclasses-json
+uritemplate==4.1.1
+    # via google-api-python-client
 urllib3==2.1.0
     # via requests
-wasabi==1.1.3
-    # via
-    #   spacy
-    #   thinc
-    #   weasel
-weasel==0.4.1
-    # via spacy
-wrapt==1.16.0
-    # via smart-open
 yarl==1.9.4
     # via aiohttp
