--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -11,7 +11,7 @@ FROM python:3.12
 
 ENV LEXIFLUX_UI_SETTINGS_ONLY=true
 ENV LEXIFLUX_SKIP_AUTH=true
-ENV OLLAMA_LOAD_MODEL=llama3
+ENV OLLAMA_LOAD_MODEL=false
 
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
