--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -3,13 +3,14 @@
 name: dockerhub
 
 on:
-  push:
-    tags:
-      - 'v*.*.*'
+  workflow_run:
+    workflows: ["CI"]
+    types:
+      - completed
 
 jobs:
   build:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: github.event.workflow_run.conclusion == 'success'
 
     runs-on: ubuntu-latest
 
@@ -17,24 +18,29 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set version var
+      - name: Extract version from tag
         run: |
           echo "RELEASE_VERSION=$(echo ${GITHUB_REF#refs/*/} | cut -c 2-)" >> $GITHUB_ENV
-          echo $RELEASE_VERSION
+        env:
+          GITHUB_REF: ${{ github.event.workflow_run.head_branch }}
 
       - name: Set up QEMU
+        if: env.RELEASE_VERSION != ''
         uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
+        if: env.RELEASE_VERSION != ''
         uses: docker/setup-buildx-action@v3
 
       - name: Login to Docker Hub
+        if: env.RELEASE_VERSION != ''
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
       - name: Build and push to docker hub
+        if: env.RELEASE_VERSION != ''
         uses: docker/build-push-action@v5
         with:
           context: ./
@@ -48,4 +54,18 @@ jobs:
             linux/arm64
 
       - name: Image digest
+        if: env.RELEASE_VERSION != ''
         run: echo ${{ steps.docker_build.outputs.digest }}
+
+      - name: Create Release
+        if: env.RELEASE_VERSION != ''
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ env.RELEASE_VERSION }}
+          release_name: Release ${{ env.RELEASE_VERSION }}
+          body: https://hub.docker.com/r/andgineer/lexiflux
+          draft: false
+          prerelease: false
