--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -71,8 +71,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ env.RELEASE_VERSION }}
+          tag_name: v${{ env.RELEASE_VERSION }}
           release_name: Release ${{ env.RELEASE_VERSION }}
-          body: https://hub.docker.com/r/andgineer/lexiflux
+          body:  |
+            Release for version v${{ env.RELEASE_VERSION }}
+            Docker image: https://hub.docker.com/r/andgineer/lexiflux/tags?page=&page_size=&ordering=&name=${{ env.RELEASE_VERSION }}
           draft: false
           prerelease: false
