--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -18,6 +18,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Fetch tags
+        run: git fetch --tags -f
+
       - name: Check for tag and extract version
         id: check_tag
         run: |
@@ -26,6 +29,7 @@ jobs:
           if [ -n "$TAG" ]; then
             VERSION=$(echo $TAG | cut -c 2-)
             echo "RELEASE_VERSION=$VERSION" >> $GITHUB_ENV
+            echo "RELEASE_TAG=$TAG" >> $GITHUB_ENV
             echo "Tag found: $TAG, Version: $VERSION"
           else
             echo "No tag found for commit $COMMIT_SHA"
@@ -71,7 +75,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: v${{ env.RELEASE_VERSION }}
+          tag_name: ${{ env.RELEASE_TAG }}
           release_name: Release ${{ env.RELEASE_VERSION }}
           body:  |
             Release for version v${{ env.RELEASE_VERSION }}
