--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -8,6 +8,12 @@ on:
     types:
       - completed
 
+permissions:
+  contents: write
+  actions: read
+  issues: write
+  pull-requests: write
+
 jobs:
   build:
     if: github.event.workflow_run.conclusion == 'success'
