--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -100,5 +100,8 @@ jobs:
     steps:
       - name: No release version found
         run: |
-          echo "No release tag found. Skipping."
-          exit 78
+          if [ "${{ env.HAS_RELEASE }}" == "true" ]; then
+            echo "Release v${{ env.RELEASE_VERSION }} published successfully."
+          else
+            echo "No release tag found. Skipping publication to Docker Hub."
+          fi
