--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -17,6 +17,7 @@ permissions:
 
 jobs:
   check_release:
+    if: github.event.workflow_run.conclusion == 'success'
     runs-on: ubuntu-latest
     outputs:
       release_version: ${{ steps.check_tag.outputs.release_version }}
