--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,10 +1,10 @@
 # Node.js build stage
 FROM node:alpine AS node-builder
 
-WORKDIR /app
+WORKDIR /lexiflux
 
-COPY *.js* /app/
-COPY lexiflux/viewport /app/lexiflux/viewport
+COPY *.js* /lexiflux/
+COPY lexiflux/viewport /lexiflux/lexiflux/viewport
 RUN npm install && npm run build
 
 FROM python:3.12
@@ -19,17 +19,20 @@ ENV DJANGO_SECRET_KEY=defaultsecretkey
 ENV DJANGO_DEBUG=False
 ENV DJANGO_ALLOWED_HOSTS=*
 
-COPY lexiflux /lexiflux
-COPY --from=node-builder /app/lexiflux/static/lexiflux/bundle.js /lexiflux/static/lexiflux/bundle.js
+# Install git
+RUN apt-get update && apt-get install -y git
+
+WORKDIR /lexiflux
+
+COPY lexiflux ./lexiflux
+COPY requirements.txt .
+COPY manage .
+
+COPY --from=node-builder /lexiflux/lexiflux/static/lexiflux/bundle.js /lexiflux/lexiflux/static/lexiflux/bundle.js
 
 RUN curl -L https://ollama.ai/install.sh | sh
 
-COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt gunicorn
-
-COPY manage /
-RUN chmod +x /manage
-
 RUN ./manage migrate
 RUN ./manage default-user
 
