--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -60,7 +60,9 @@ attrs==24.2.0
     #   referencing
     #   trio
 babel==2.16.0
-    # via jupyterlab-server
+    # via
+    #   jupyterlab-server
+    #   mkdocs-material
 beautifulsoup4==4.12.3
     # via
     #   -r requirements.txt
@@ -68,6 +70,8 @@ beautifulsoup4==4.12.3
     #   nbconvert
 bleach==6.1.0
     # via nbconvert
+bracex==2.5
+    # via wcmatch
 cachetools==5.4.0
     # via
     #   -r requirements.txt
@@ -95,7 +99,13 @@ charset-normalizer==3.3.2
 click==8.1.7
     # via
     #   -r requirements.txt
+    #   mkdocs
+    #   mkdocstrings
     #   nltk
+colorama==0.4.6
+    # via
+    #   griffe
+    #   mkdocs-material
 comm==0.2.2
     # via ipykernel
 coverage==7.6.1
@@ -171,6 +181,8 @@ fsspec==2024.6.1
     # via
     #   -r requirements.txt
     #   huggingface-hub
+ghp-import==2.1.0
+    # via mkdocs
 google-ai-generativelanguage==0.6.6
     # via
     #   -r requirements.txt
@@ -206,6 +218,8 @@ googleapis-common-protos==1.63.2
     #   -r requirements.txt
     #   google-api-core
     #   grpcio-status
+griffe==0.48.0
+    # via mkdocstrings-python
 grpcio==1.65.4
     # via
     #   -r requirements.txt
@@ -275,6 +289,9 @@ jinja2==3.1.4
     #   jupyter-server
     #   jupyterlab
     #   jupyterlab-server
+    #   mkdocs
+    #   mkdocs-material
+    #   mkdocstrings
     #   nbconvert
 jiter==0.5.0
     # via
@@ -376,10 +393,20 @@ lxml==5.3.0
     # via
     #   -r requirements.txt
     #   ebooklib
+markdown==3.6
+    # via
+    #   mkdocs
+    #   mkdocs-autorefs
+    #   mkdocs-material
+    #   mkdocstrings
+    #   pymdown-extensions
 markupsafe==2.1.5
     # via
     #   -r requirements.txt
     #   jinja2
+    #   mkdocs
+    #   mkdocs-autorefs
+    #   mkdocstrings
     #   nbconvert
     #   werkzeug
 marshmallow==3.21.3
@@ -392,8 +419,34 @@ matplotlib-inline==0.1.7
     #   ipython
 mccabe==0.7.0
     # via pylint
+mergedeep==1.3.4
+    # via
+    #   mkdocs
+    #   mkdocs-get-deps
 mistune==3.0.2
     # via nbconvert
+mkdocs==1.6.0
+    # via
+    #   mkdocs-autorefs
+    #   mkdocs-awesome-pages-plugin
+    #   mkdocs-material
+    #   mkdocstrings
+mkdocs-autorefs==1.0.1
+    # via mkdocstrings
+mkdocs-awesome-pages-plugin==2.9.3
+    # via -r requirements.dev.in
+mkdocs-get-deps==0.2.0
+    # via mkdocs
+mkdocs-material==9.5.31
+    # via -r requirements.dev.in
+mkdocs-material-extensions==1.3.1
+    # via mkdocs-material
+mkdocstrings==0.25.2
+    # via
+    #   -r requirements.dev.in
+    #   mkdocstrings-python
+mkdocstrings-python==1.10.7
+    # via mkdocstrings
 multidict==6.0.5
     # via
     #   -r requirements.txt
@@ -406,6 +459,8 @@ mypy-extensions==1.0.0
     #   -r requirements.txt
     #   mypy
     #   typing-inspect
+natsort==8.4.0
+    # via mkdocs-awesome-pages-plugin
 nbclient==0.10.0
     # via nbconvert
 nbconvert==7.16.4
@@ -457,17 +512,24 @@ packaging==24.1
     #   jupyterlab-server
     #   langchain-core
     #   marshmallow
+    #   mkdocs
     #   nbconvert
     #   pytest
+paginate==0.5.6
+    # via mkdocs-material
 pandocfilters==1.5.1
     # via nbconvert
 parso==0.8.4
     # via jedi
+pathspec==0.12.1
+    # via mkdocs
 pexpect==4.9.0
     # via ipython
 platformdirs==4.2.2
     # via
     #   jupyter-core
+    #   mkdocs-get-deps
+    #   mkdocstrings
     #   pylint
     #   virtualenv
 pluggy==1.5.0
@@ -537,6 +599,7 @@ pydantic-core==2.20.1
 pygments==2.18.0
     # via
     #   ipython
+    #   mkdocs-material
     #   nbconvert
 pylint==3.2.6
     # via
@@ -547,6 +610,11 @@ pylint-django==2.5.5
     # via -r requirements.dev.in
 pylint-plugin-utils==0.8.2
     # via pylint-django
+pymdown-extensions==10.9
+    # via
+    #   -r requirements.dev.in
+    #   mkdocs-material
+    #   mkdocstrings
 pyopenssl==24.2.1
     # via -r requirements.txt
 pyparsing==3.1.2
@@ -569,6 +637,7 @@ python-dateutil==2.9.0.post0
     # via
     #   arrow
     #   faker
+    #   ghp-import
     #   jupyter-client
 python-json-logger==2.0.7
     # via jupyter-events
@@ -580,7 +649,13 @@ pyyaml==6.0.2
     #   langchain
     #   langchain-community
     #   langchain-core
+    #   mkdocs
+    #   mkdocs-get-deps
     #   pre-commit
+    #   pymdown-extensions
+    #   pyyaml-env-tag
+pyyaml-env-tag==0.1
+    # via mkdocs
 pyzmq==26.1.0
     # via
     #   ipykernel
@@ -594,6 +669,7 @@ referencing==0.35.1
 regex==2024.7.24
     # via
     #   -r requirements.txt
+    #   mkdocs-material
     #   nltk
     #   tiktoken
 requests==2.32.3
@@ -607,6 +683,7 @@ requests==2.32.3
     #   langchain
     #   langchain-community
     #   langsmith
+    #   mkdocs-material
     #   tiktoken
 rfc3339-validator==0.1.4
     # via
@@ -760,6 +837,10 @@ urllib3==2.2.2
     #   selenium
 virtualenv==20.26.3
     # via pre-commit
+watchdog==4.0.2
+    # via mkdocs
+wcmatch==9.0
+    # via mkdocs-awesome-pages-plugin
 wcwidth==0.2.13
     # via prompt-toolkit
 webcolors==24.8.0
