--- a/requirements.dev.in
+++ b/requirements.dev.in
@@ -18,7 +18,12 @@ mypy
 pylint-django
 
 # debug
-notebook
+# versions pinned because of https://github.com/django-extensions/django-extensions/issues/1835
+jupyter-client==8.0.3
+jupyter-console==6.5.1
+jupyter-core==5.2.0
+notebook==6.5.4
+traitlets==5.9.0
 
 # build & reqs management
 invoke
