--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -836,6 +836,8 @@ typing-inspect==0.9.0
     # via
     #   -r requirements.txt
     #   dataclasses-json
+unidecode==1.3.8
+    # via -r requirements.txt
 uri-template==1.3.0
     # via jsonschema
 uritemplate==4.1.1
