--- a/requirements.txt
+++ b/requirements.txt
@@ -317,6 +317,8 @@ typing-extensions==4.12.2
     #   typing-inspect
 typing-inspect==0.9.0
     # via dataclasses-json
+unidecode==1.3.8
+    # via -r requirements.in
 uritemplate==4.1.1
     # via google-api-python-client
 urllib3==2.2.2
