--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -4,7 +4,7 @@ aiohappyeyeballs==2.4.3
     # via
     #   -r requirements.txt
     #   aiohttp
-aiohttp==3.10.8
+aiohttp==3.10.9
     # via
     #   -r requirements.txt
     #   langchain
@@ -21,7 +21,7 @@ annotated-types==0.7.0
     # via
     #   -r requirements.txt
     #   pydantic
-anthropic==0.34.2
+anthropic==0.35.0
     # via
     #   -r requirements.txt
     #   langchain-anthropic
@@ -46,7 +46,7 @@ asgiref==3.8.1
     # via
     #   -r requirements.txt
     #   django
-astroid==3.3.4
+astroid==3.3.5
     # via pylint
 asttokens==2.4.1
     # via stack-data
@@ -178,7 +178,7 @@ filelock==3.16.1
     #   virtualenv
 fqdn==1.5.1
     # via jsonschema
-frozendict==2.4.4
+frozendict==2.4.5
     # via
     #   -r requirements.txt
     #   genanki
@@ -313,7 +313,7 @@ jinja2==3.1.4
     #   mkdocstrings
     #   nbconvert
     #   notebook
-jiter==0.5.0
+jiter==0.6.0
     # via
     #   -r requirements.txt
     #   anthropic
@@ -366,15 +366,15 @@ jupyter-server-terminals==0.5.3
     # via jupyter-server
 jupyterlab-pygments==0.3.0
     # via nbconvert
-langchain==0.3.1
+langchain==0.3.2
     # via
     #   -r requirements.txt
     #   langchain-community
-langchain-anthropic==0.2.1
+langchain-anthropic==0.2.3
     # via -r requirements.txt
 langchain-community==0.3.1
     # via -r requirements.txt
-langchain-core==0.3.7
+langchain-core==0.3.9
     # via
     #   -r requirements.txt
     #   langchain
@@ -388,13 +388,13 @@ langchain-google-genai==2.0.0
     # via -r requirements.txt
 langchain-mistralai==0.2.0
     # via -r requirements.txt
-langchain-openai==0.2.1
+langchain-openai==0.2.2
     # via -r requirements.txt
 langchain-text-splitters==0.3.0
     # via
     #   -r requirements.txt
     #   langchain
-langsmith==0.1.129
+langsmith==0.1.131
     # via
     #   -r requirements.txt
     #   langchain
@@ -553,7 +553,7 @@ pluggy==1.5.0
     # via
     #   allure-python-commons
     #   pytest
-pre-commit==3.8.0
+pre-commit==4.0.0
     # via -r requirements.dev.in
 prometheus-client==0.21.0
     # via
@@ -677,6 +677,8 @@ python-dotenv==1.0.1
     #   pydantic-settings
 python-json-logger==2.0.7
     # via jupyter-events
+pytz==2024.2
+    # via -r requirements.dev.in
 pyyaml==6.0.2
     # via
     #   -r requirements.txt
@@ -722,7 +724,12 @@ requests==2.32.3
     #   langchain-community
     #   langsmith
     #   mkdocs-material
+    #   requests-toolbelt
     #   tiktoken
+requests-toolbelt==1.0.0
+    # via
+    #   -r requirements.txt
+    #   langsmith
 rfc3339-validator==0.1.4
     # via
     #   jsonschema
@@ -794,7 +801,7 @@ terminado==0.18.1
     #   jupyter-server
     #   jupyter-server-terminals
     #   notebook
-tiktoken==0.7.0
+tiktoken==0.8.0
     # via
     #   -r requirements.txt
     #   langchain-openai
@@ -845,7 +852,7 @@ trio==0.26.2
     #   trio-websocket
 trio-websocket==0.11.1
     # via selenium
-types-python-dateutil==2.9.0.20240906
+types-python-dateutil==2.9.0.20241003
     # via arrow
 typing-extensions==4.12.2
     # via
