--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 #    uv pip compile requirements.in --output-file=requirements.txt
 aiohappyeyeballs==2.4.3
     # via aiohttp
-aiohttp==3.10.8
+aiohttp==3.10.9
     # via
     #   langchain
     #   langchain-community
@@ -10,7 +10,7 @@ aiosignal==1.3.1
     # via aiohttp
 annotated-types==0.7.0
     # via pydantic
-anthropic==0.34.2
+anthropic==0.35.0
     # via langchain-anthropic
 anyio==4.6.0
     # via
@@ -73,7 +73,7 @@ fasttext==0.9.3
     # via -r requirements.in
 filelock==3.16.1
     # via huggingface-hub
-frozendict==2.4.4
+frozendict==2.4.5
     # via genanki
 frozenlist==1.4.1
     # via
@@ -138,7 +138,7 @@ idna==3.10
     #   httpx
     #   requests
     #   yarl
-jiter==0.5.0
+jiter==0.6.0
     # via
     #   anthropic
     #   openai
@@ -148,15 +148,15 @@ jsonpatch==1.33
     # via langchain-core
 jsonpointer==3.0.0
     # via jsonpatch
-langchain==0.3.1
+langchain==0.3.2
     # via
     #   -r requirements.in
     #   langchain-community
-langchain-anthropic==0.2.1
+langchain-anthropic==0.2.3
     # via -r requirements.in
 langchain-community==0.3.1
     # via -r requirements.in
-langchain-core==0.3.7
+langchain-core==0.3.9
     # via
     #   -r requirements.in
     #   langchain
@@ -170,11 +170,11 @@ langchain-google-genai==2.0.0
     # via -r requirements.in
 langchain-mistralai==0.2.0
     # via -r requirements.in
-langchain-openai==0.2.1
+langchain-openai==0.2.2
     # via -r requirements.in
 langchain-text-splitters==0.3.0
     # via langchain
-langsmith==0.1.129
+langsmith==0.1.131
     # via
     #   langchain
     #   langchain-community
@@ -279,7 +279,10 @@ requests==2.32.3
     #   langchain
     #   langchain-community
     #   langsmith
+    #   requests-toolbelt
     #   tiktoken
+requests-toolbelt==1.0.0
+    # via langsmith
 rsa==4.9
     # via google-auth
 setuptools==75.1.0
@@ -307,7 +310,7 @@ tenacity==8.5.0
     #   langchain
     #   langchain-community
     #   langchain-core
-tiktoken==0.7.0
+tiktoken==0.8.0
     # via langchain-openai
 tokenizers==0.20.0
     # via
